2005-10-13  Mo DeJong  <mdejong@users.sourceforge.net>

        Enable Java debugger support for Jacl. When the
        JACL_DEBUG=1 env var is set, both jaclsh and
        jaclsh.bat will start the Jacl shell in a mode
        that supports attaching a Java source debugger.
        Jar files that contain the Java source code
        for each package are now created and installed
        so that a debugger can automatically display
        the source code.

        * Makefile.in: Create tcljavasrc.jar, jaclsrc.jar,
        itclsrc.jar, and install them.
        * configure: Regen.
        * jaclsh.bat.in:
        * jaclsh.in: Add itcl.jar to the CLASSPATH.
        Add new debug source jars to CLASSPATH if the
        JACL_DEBUG env var is set.
        * new_features.txt: Mention debug mode for Jacl.
        * tcljava.m4 (AC_JAVA_TOOLS): Update logic for
        debug flags under Win32.

2005-10-12  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tcljava/tcl/lang/TclBoolean.java:
        Reimplement TclBoolean class so that only two
        instances of the TclBoolean internal rep will
        ever exist. This matches the C Tcl impl.
        In the get() method, check for an integer
        with the value 0 or 1, and return a boolean
        value without converting the internal rep
        to a boolean type.
        * src/tests/tcljava/tcl/lang/TestObjCmd.java:
        Add support for "boolean" type so that
        conversion tests will run as expected.
        * tests/tcl/obj.test: Add int->boolean
        conversion tests.

2005-10-11  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/StringCmd.java (cmdProc):
        Use Util.getBoolean() since TclBoolean.get()
        now converts int and double values.
        * src/tcljava/tcl/lang/TclBoolean.java (setBooleanFromAny):
        Update conversion to boolean type to match Tcl 8.4
        implementation where int and double numbers are